apps/nas01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas01
spec:
  type: ExternalName
  externalName: nas01.home.arpa.
